# autoxtime

./: .gitignore  CMakeLists.txt  README.md  TODO.md  Vagrantfile
.github/: CODEOWNERS
.github/workflows/: build.yaml  compile.yaml  compile_windows.yaml  static-analysis.yaml
archive/src/autoxtime/exe/cmake/: autoxtime_server.cmake
archive/src/autoxtime/server/src/: apiv1.h  authstore.cpp  autoxtimeserver.cpp  car.cpp  driver.cpp  root.cpp  run.h
cmake/: external_cutelyst.cmake  external_grantlee.cmake  external_rapidcsv.cmake
config/: db.conf  timers.conf
data/: 20201004-AxWareEventExport.csv  AxWareEventExport_with_phone.csv  SatTT-AxWareEventExport.csv  SunFun-AxWareEventExport.csv
db/: db_fake_data.sql  db_table_create.sql  db_user_create.sql  local_postgres.txt  table_drop.sql
src/: CMakeLists.txt  main.cpp
src/AutoXTimeServer/: CMakeLists.txt
src/AutoXTimeServer/root/src/driver/: driver_get.html  form_create.html  list.html
src/AutoXTimeServer/src/: CMakeLists.txt  apiv1.cpp  auth.cpp  auth.h  autoxtimeserver.h  class.cpp  run.cpp
src/autoxtime/: CMakeLists.txt  autoxtime.h
src/autoxtime/AutoXTimeServer/: CMakeLists.txt
src/autoxtime/AutoXTimeServer/root/src/driver/: create_done.html
src/autoxtime/AutoXTimeServer/root/src/root/: index.html
src/autoxtime/AutoXTimeServer/root/static/css/: main.css
src/autoxtime/AutoXTimeServer/src/: CMakeLists.txt  auth.cpp  autoxtimeserver.cpp  driver.cpp
src/autoxtime/cmake/: autoxtime.cmake
src/autoxtime/codec/: FarmtekCodec.cpp  FarmtekCodec.h  ICodec.cpp  ICodec.h  MotorSportsRegCodec.cpp  MotorSportsRegCodec.h  MotorsportRegCodec.cpp  MotorsportRegCodec.h  RaceAmericaTlinkCodec.cpp  RaceAmericaTlinkCodec.h
src/autoxtime/config/: ConfigStore.cpp  ConfigStore.h
src/autoxtime/db/: AsyncModel.h  BaseModel.cpp  BaseModel.h  BaseModelT.h  CarClassModel.cpp  CarClassModel.h  CarModel.cpp  CarModel.h  DbConnection.cpp  DbConnection.h  DbListener.cpp  DbListener.h  DbThreadPool.cpp  DbThreadPool.h  Driver.cpp  Driver.h  DriverModel.cpp  DriverModel.h  EventModel.cpp  EventModel.h  EventRegistrationModel.cpp  EventRegistrationModel.h  OrganizationModel.cpp  OrganizationModel.h  RunModel.cpp  RunModel.h  SeasonModel.cpp  SeasonModel.h  db.h
src/autoxtime/exe/: AppCommon.cpp  AppCommon.h  CMakeLists.txt  autoxtime.cpp  db_listener.cpp  server.cpp  timers.cpp
src/autoxtime/exe/cmake/: autoxtime_db_listener.cmake  autoxtime_server.cmake  autoxtime_timers.cmake  autoxtime_ui.cmake
src/autoxtime/log/: Log.h  Logger.cpp  Logger.h
src/autoxtime/proto/: CMakeLists.txt  car.proto  car_class.proto  driver.proto  event.proto  event_payments.proto  event_registration.proto  organization.proto  region.proto  run.proto  season.proto  timer_event.proto  work_assignments.proto
src/autoxtime/server/root/src/: wrapper.html
src/autoxtime/server/root/src/driver/: find.html
src/autoxtime/server/src/: CMakeLists.txt  authstoresql.h  car.h  class.h  driver.h
src/autoxtime/timing/: TimingStateMachine.cpp  TimingStateMachine.h
src/autoxtime/transport/: FileIO.cpp  FileIO.h  ITransport.cpp  ITransport.h  MotorSportsRegReader.cpp  MotorSportsRegReader.h  SerialPortAsyncReader.cpp  SerialPortAsyncReader.h
src/autoxtime/ui/: AdminWidget.cpp  AdminWidget.h  CheckBoxItemDelegate.cpp  CheckBoxItemDelegate.h  EventImportDialog.cpp  EventImportDialog.h  EventSelectionWidget.cpp  EventSelectionWidget.h  EventWidget.cpp  EventWidget.h  FilterHighlightItemDelegate.cpp  FilterHighlightItemDelegate.h  MainWindow.cpp  MainWindow.h  MultiSortFilterProxyModel.cpp  MultiSortFilterProxyModel.h  RegistrationTableModel.cpp  RegistrationTableModel.h  RegistrationTableWidget.cpp  RegistrationTableWidget.h  RegistrationWidget.cpp  RegistrationWidget.h  RunTableModel.cpp  RunTableModel.h  RunTableWidget.cpp  RunTableWidget.h  StandardItem.cpp  StandardItem.h  TimingWidget.cpp  TimingWidget.h  ui.h
src/autoxtime/util/: ColorUtil.cpp  ColorUtil.h  util.h
